--- a/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
@@ -2,18 +2,135 @@
 
 Ethics refer to a set of moral principles that guide individuals or groups in determining what is right or wrong, good or bad, in a given situation. They often encompass values such as honesty, fairness, integrity, and respect for others. Many professional bodies like ISC2 have established codes of ethics that members must adhere to, ensuring ethical conduct in their respective fields.
 
-<B> All CISSP candidates must understand and integrate these ethics into their professional practice both before and after taking the exam, as they serve as guiding principles.
+:brain: All CISSP candidates must understand and integrate these ethics into their professional practice both before and after taking the exam, as they serve as guiding principles. 
 
-<L> The information in the following comes from: https://www.isc2.org/ethics.
+:link: The information in the following comes from: https://www.isc2.org/ethics.
 
-All information security professionals who are certified by ISC2 recognize that such certification is a privilege that must be both earned and maintained. In support of this principle, all ISC2 members are required to commit to fully support this Code of Ethics (the "Code"). ISC2 members who intentionally or knowingly violate any provision of the Code will be subject to action by a peer review panel, which may result in the revocation of certification. ISC2 members are obligated to follow the ethics complaint procedure upon observing any action by an ISC2 member that breaches the Code. Failure to do so may be considered a breach of the Code pursuant to Canon IV.
+>All information security professionals who are certified by ISC2 recognize that such certification is a privilege that must be both earned and maintained. In support of this principle, all ISC2 members are required to commit to fully support this Code of Ethics (the "Code"). ISC2 members who intentionally or knowingly violate any provision of the Code will be subject to action by a peer review panel, which may result in the revocation of certification. ISC2 members are obligated to follow the ethics complaint procedure upon observing any action by an ISC2 member that breaches the Code. Failure to do so may be considered a breach of the Code pursuant to Canon IV.
 There are only four mandatory canons in the Code. By necessity, such high-level guidance is not intended to be a substitute for the ethical judgment of the professional.
+>
+> Code of Ethics Preamble:
+> - The safety and welfare of society and the common good, duty to our principals, and duty to each other, require that we adhere, and be seen to adhere, to the highest ethical standards of behavior.
+> - Therefore, strict adherence to this Code is a condition of certification.
+>
+> Code of Ethics Canons:
+> 1. Protect society, the common good, necessary public trust and confidence, and the infrastructure.
+> 2. Act honorably, honestly, justly, responsibly, and legally.
+> 3. Provide diligent and competent service to principals.
+> 4. Advance and protect the profession.
 
-Code of Ethics Preamble:
-The safety and welfare of society and the common good, duty to our principals, and duty to each other, require that we adhere, and be seen to adhere, to the highest ethical standards of behavior.
-Therefore, strict adherence to this Code is a condition of certification.
-Code of Ethics Canons:
-Protect society, the common good, necessary public trust and confidence, and the infrastructure.
-Act honorably, honestly, justly, responsibly, and legally.
-Provide diligent and competent service to principals.
-Advance and protect the profession.
+
+:necktie: In his daily professional conduct, a genuine manager adheres to ethics canons, principles, and policies in descending order of importance. He frequently drafts ethical codes, principles, and policies to enable company personnel to seamlessly integrate them into their regular business practices.
+
+:bulb: A code of ethics is usually designed to provide general direction rather than address specific technical situations.
+
+:brain: Technical skills build systems. Ethics keep them worthy of trust.
+
+(ISC)² has a formal, serious process for handling complaints, ensuring that the integrity of the certification and the trust in the profession are maintained.
+The process is designed to be fair, thorough, and confidential. Here’s the key flow:
+1. Filing a Complaint:
+- Anyone can file a complaint including members of the public, employers, colleagues, or other (ISC)² members.
+- The complaint must be in writing and specific.
+- Anonymous complaints are generally not accepted.
+2. Initial Review:
+- The (ISC)² Ethics Committee reviews whether the complaint falls under its jurisdiction and whether it contains enough information to proceed.
+- If the complaint is clearly frivolous or outside of ethics matters, it can be dismissed at this early stage.
+3. Notification:
+- If the complaint proceeds, the accused (called the respondent) is notified and given a chance to respond.
+- This preserves due process — the right to defend oneself.
+4. Investigation and Hearing:
+- The Ethics Committee may investigate further if needed, gathering evidence.
+- In complex cases, a formal hearing may be convened.
+5. Decision and Sanctions:
+- If the member is found to have violated the Code, the Committee decides on sanctions.
+- Sanctions can include:
+-- Private reprimand
+-- Public reprimand
+-- Suspension of certification
+-- Revocation of certification
+6. Appeal:
+- The member has a right to appeal the decision within a specified timeframe.
+- Appeals are typically reviewed by a separate (ISC)² committee.
+
+
+
+### Open Questions ###
+1. What are ethics, and how do they relate to professional organizations like ISC²?
+<details>
+  <summary>Show answer</summary>
+Ethics are moral principles that guide behavior and define right and wrong. Professional organizations like ISC² establish codes of ethics to ensure ethical conduct among their members.  
+</details>
+
+2. Explain the purpose of the ISC² Code of Ethics complaint procedure.
+<details>
+  <summary>Show answer</summary>
+ISC² members who intentionally violate the Code of Ethics may face disciplinary action from a peer review panel, including potential revocation of their certification. 
+</details>
+
+3. Explain the purpose of the ISC² Code of Ethics complaint procedure
+<details>
+  <summary>Show answer</summary>
+The complaint procedure allows members to report suspected ethical breaches by other members, ensuring accountability and upholding the integrity of the Code.
+</details>
+
+4. Why are the four canons in the ISC² Code of Ethics considered high-level guidance?
+<details>
+  <summary>Show answer</summary>
+The four canons offer broad guidelines that require individual ethical judgment and interpretation to apply to specific situations.
+</details>
+
+5. Summarize the main idea expressed in the ISC² Code of Ethics Preamble.
+<details>
+  <summary>Show answer</summary>
+The Preamble emphasizes the importance of ethical behavior for the safety and well-being of society, individuals, and the profession itself.
+</details>
+
+6. According to the first canon, what are ISC² members obligated to protect?
+<details>
+  <summary>Show answer</summary>
+ISC² members are obligated to protect society, the common good, public trust and confidence, and critical infrastructure.
+</details>
+
+7. What values are emphasized in the second canon of the ISC² Code of Ethics?
+<details>
+  <summary>Show answer</summary>
+The second canon stresses the values of honor, honesty, justice, responsibility, and legality in all professional actions.
+</details>
+
+8. What responsibility do ISC² members have towards their principals according to the third canon?
+<details>
+  <summary>Show answer</summary>
+ISC² members must provide diligent and competent service to their principals, demonstrating professionalism and commitment to their clients' needs
+</details>
+
+9. What is the significance of the fourth canon in relation to the information security profession?
+<details>
+  <summary>Show answer</summary>
+The fourth canon emphasizes the continuous development and protection of the information security profession through knowledge sharing and ethical practice.
+</details>
+
+10. How does adherence to the ISC² Code of Ethics benefit both individuals and the profession as a whole?
+  <summary>Show answer</summary>
+Adherence to the Code upholds the reputation of the profession, builds trust among stakeholders, and ensures ethical and responsible conduct, ultimately benefiting both individuals and the collective.
+</details>
+
+
+## 1.1.2 Organizational code of ethics
+
+The framework for ethical computing practice provided by the Computer Ethics Institute has been extensively employed in formulating acceptable use policies and educating users about the proper utilization of computing resources. 
+
+:link: As a leader in the field, the Computer Ethics Institute has provided an advanced forum and resource for identifying, assessing and responding to ethical issues associated with the advancement of information technologies in society: https://computerethics.institute/
+
+>Within the Computer Ethics Institute's guidelines, known as "The Ten Commandments of Computer Ethics," the following principles are outlined:
+>1. Thou shalt not use a computer to harm other people.
+>2. Thou shalt not interfere with other people’s computer work.
+>3. Thou shalt not snoop around in other people’s computer files.
+>4. Thou shalt not use a computer to steal.
+>5. Thou shalt not use a computer to bear false witness.
+>6. Thou shalt not copy or use proprietary software for which you have not paid.
+>7. Thou shalt not use other people’s computer resources without authorization orproper compensation.
+>8. Thou shalt not appropriate other people’s intellectual output.
+>9. Thou shalt think about the social consequences of the program you are writing orthe system you are designing.
+>10. Thou shalt always use a computer in ways that ensure consideration and respectfor your fellow humans.
+> - Computer Ethics Institute Guidelines
+
