Update 1.1 Understand, adhere to, and promote professional ethics.md

--- a/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
@@ -114,6 +114,7 @@ The fourth canon emphasizes the continuous development and protection of the inf
 Adherence to the Code upholds the reputation of the profession, builds trust among stakeholders, and ensures ethical and responsible conduct, ultimately benefiting both individuals and the collective.
 </details>
 
+---
 
 ## 1.1.2 Organizational code of ethics
 
@@ -132,5 +133,34 @@ The framework for ethical computing practice provided by the Computer Ethics Ins
 >8. Thou shalt not appropriate other people’s intellectual output.
 >9. Thou shalt think about the social consequences of the program you are writing orthe system you are designing.
 >10. Thou shalt always use a computer in ways that ensure consideration and respectfor your fellow humans.
-> - Computer Ethics Institute Guidelines
+>
+>  *Computer Ethics Institute Guidelines*
 
+The IEEE Code of Ethics is a set of principles and professional standards established by the Institute of Electrical and Electronics Engineers (IEEE) to guide the ethical behavior of its members and those in related professions. It is designed to ensure integrity, accountability, and fairness in professional activities while promoting the welfare of society
+
+:link: The information in the following comes from: https://www.ieee.org/about/corporate/governance/p7-8.html
+
+>We, the members of the IEEE, in recognition of the importance of our technologies in affecting the quality of life throughout the world, and in accepting a personal obligation to our profession, its members and the communities we serve, do hereby commit ourselves to the highest ethical and professional conduct and agree:
+>
+>I. To uphold the highest standards of integrity, responsible behavior, and ethical conduct in professional activities.
+>1. to hold paramount the safety, health, and welfare of the public, to strive to comply with ethical design and sustainable development practices, to protect the privacy of others, and to disclose promptly factors that might endanger the public or the environment;
+>2. to improve the understanding by individuals and society of the capabilities and societal implications of conventional and emerging technologies, including intelligent systems;
+>3. to avoid real or perceived conflicts of interest whenever possible, and to disclose them to affected parties when they do exist;
+>4. to avoid unlawful conduct in professional activities, and to reject bribery in all its forms;
+>5. to seek, accept, and offer honest criticism of technical work, to acknowledge and correct errors, to be honest and realistic in stating claims or estimates based on available data, and to credit properly the contributions of others;
+>6. to maintain and improve our technical competence and to undertake technological tasks for others only if qualified by training or experience, or after full disclosure of pertinent limitations;
+>   
+>II. To treat all persons fairly and with respect, to not engage in harassment or discrimination, and to avoid injuring others.
+>8. to treat all persons fairly and with respect, and to not engage in discrimination based on characteristics such as race, religion, gender, disability, age, national origin, sexual orientation, gender identity, or gender expression;
+>9. to not engage in harassment of any kind, including sexual harassment or bullying behavior;
+>10. to avoid injuring others, their property, reputation, or employment by false or malicious actions, rumors or any other verbal or physical abuses;
+>    
+>III. To strive to ensure this code is upheld by colleagues and co-workers.
+>11. to support colleagues and co-workers in following this code of ethics, to strive to ensure the code is upheld, and to not retaliate against individuals reporting a violation.
+
+RFC 1087 is titled "Ethics and the Internet". It was published at a time when the internet (then called the ARPANET) was primarily used for academic, research, and governmental purposes. Its purpose was to clearly define unethical and unacceptable behavior by users of the network, especially those who would interfere with its function, misuse its resources, or compromise its mission. The core message of RFC 1087 is that the Internet is a privileged resource built for the advancement of research and education. Anyone using it must uphold ethical conduct and avoid activities that undermine the network or its community. RFC 1087 considers the following behaviors unethical:
+- Unauthorized access to network resources
+- Disruption of the intended use of the network
+- Waste of resources, such as bandwidth or processing power
+- Destruction or alteration of information
+- Compromise of privacy of users
