Update 1.2 Understand and apply security concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
@@ -103,7 +103,7 @@ Together, these four steps—Identification, Authentication, Authorization, and 
 
 You may also come across the IAAAA framework, where the key distinction is the Auditing component. This focuses on monitoring and reviewing activities to ensure compliance and security. As a result, IAAAA offers a more comprehensive approach, enhancing accountability through regular checks and balances.
 
-****PIC IAAA****
+<img width="460" alt="IAAA" src="https://github.com/user-attachments/assets/a91e5d29-7de3-46e5-a39d-784aa62a45f0" />
 
 Historically, the AAA framework (Authentication, Authorization, Accountability) was the predecessor to IAAA and IAAAA. Interestingly, when searching IAAA in IETF documents, no results are found, whereas searching for AAA returns five pages of results.
 
@@ -126,7 +126,6 @@ Identity Assurance pertains to the degree of certainty a system possesses regard
 Other important concepts such as defense in depth, abstraction, data hiding, and obfuscation form the foundation of secure architectures. These principles are part of authoritative standards like ISO/IEC 27001 and NIST guidelines 
 
 **Defense in depth** is a concept that emphasizes the use of multiple layers of security controls and mechanisms to protect data and systems. Rather than relying on a single line of defense, this approach states that if one control fails, others must be in place to mitigate the risk. This concept aligns with the principle of layered security.
-
 The implementation of defense in depth usually spans three key layers:
 - **Physical Controls:** that are are tangible security measures such as locks, access badges, and surveillance systems to restrict unauthorized physical access to facilities and resources.
 - **Technical Controls:** involving the use of technology, such as firewalls, intrusion detection systems (IDS), and encryption, to protect digital assets from cyber threats.
@@ -139,7 +138,6 @@ For example, users interact with an operating system through high-level commands
 Abstraction is also used in data structures and object-oriented programming to encapsulate details and reduce attack surfaces. ISO/IEC 27001 highlights abstraction as a means to streamline operations while maintaining security.
 
 **Data hiding** focuses on concealing specific details of data or processes to limit access and reduce the risk of exposure to unauthorized parties. This principle ensures that only authorized users or systems have access to sensitive information, adhering to the principle of "need-to-know."
-
 Examples of data hiding include:
 - Masking sensitive information, such as Social Security numbers, in user interfaces.
 - Segregating network traffic to isolate sensitive data.
