Update 1.2 Understand and apply security concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
@@ -152,3 +152,63 @@ Examples of security through obscurity are:
 
 :necktie: Whatever your approach to cybersecurity, always remember the importance of measuring security. Security should deliver measurable benefits, and these benefits must be tracked using clear metrics.
 
+### Open Questions ###
+1. What are the five pillars of information security and what do they represent?
+<details>
+  <summary>Show answer</summary>
+The five pillars are: Confidentiality, ensuring information is accessible only to authorized individuals; Integrity, maintaining the accuracy and completeness of data; Availability, ensuring authorized users have timely access to information; Authenticity, verifying the identity of users and the source of data; and Non-repudiation, proving actions or transactions and preventing denial of involvement.
+</details>
+
+2. Differentiate between the CIA triad and the DAD triad in information security.
+<details>
+  <summary>Show answer</summary>
+The CIA triad stands for Confidentiality, Integrity, and Availability, representing the core principles of information security. The DAD triad represents the opposite: Disclosure, Alteration, and Destruction, highlighting potential threats to information systems.
+</details>
+
+3. Explain the concept of defense in depth and provide examples of its implementation across different layers.
+<details>
+  <summary>Show answer</summary>
+Defense in depth employs multiple layers of security controls to protect data. Examples include physical controls like locks and surveillance, technical controls like firewalls and encryption, and administrative controls such as policies and training.
+</details>
+
+4. How do abstraction and data hiding contribute to enhancing security in information systems?
+<details>
+  <summary>Show answer</summary>
+Abstraction simplifies complex systems by hiding unnecessary details, reducing complexity and minimizing security risks. Data hiding conceals specific data details, limiting access to sensitive information and adhering to the need-to-know principle
+</details>
+
+5. What is the purpose of the IAAA framework and what are its four key steps?
+<details>
+  <summary>Show answer</summary>
+The IAAA framework provides mechanisms for access control and accountability. Its four steps are Identification, claiming an identity; Authentication, verifying the claimed identity; Authorization, determining access rights; and Accountability, tracking and recording user activities.
+</details>
+
+6. Describe the differences between Identity Assurance Levels (IAL) 1, 2, and 3.
+<details>
+  <summary>Show answer</summary>
+IAL1 relies on self-assertion without external verification. IAL2 requires evidence to support the claimed identity. IAL3 necessitates in-person validation with government or public databases.
+</details>
+
+7. Explain the significance of Authenticator Assurance Levels (AAL) and their role in authentication.
+<details>
+  <summary>Show answer</summary>
+AALs denote the level of control users have over authenticators. AAL1 uses single-factor authentication. AAL2 mandates at least two factors. AAL3 requires two factors and a cryptographic key with a physical device for the highest authentication confidence.
+</details>
+
+8. Differentiate between auditing and monitoring in the context of information security.
+<details>
+  <summary>Show answer</summary>
+Auditing is a retrospective review of logs and activities to ensure compliance and detect anomalies. Monitoring is a real-time observation of systems to identify and respond to potential threats.
+</details>
+
+9. Why is "security through obscurity" generally discouraged as a reliable security practice?
+<details>
+  <summary>Show answer</summary>
+Security through obscurity relies on hiding system details, which is unreliable as determined adversaries can uncover these details. It fails to provide true security and is discouraged in favor of robust security practices.
+</details>
+
+10. Why is it important to measure the effectiveness of security measures, and how can this be achieved?
+  <summary>Show answer</summary>
+Measuring security effectiveness allows for demonstrating its value and identifying areas for improvement. This can be achieved through metrics such as the number of prevented incidents, mean time to detect and remediate threats, and compliance with security standards.
+</details>
+
