Update 1.2 Understand and apply security concepts.md

--- a/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.2 Understand and apply security concepts.md
@@ -208,6 +208,7 @@ Security through obscurity relies on hiding system details, which is unreliable 
 </details>
 
 10. Why is it important to measure the effectiveness of security measures, and how can this be achieved?
+<details>  
   <summary>Show answer</summary>
 Measuring security effectiveness allows for demonstrating its value and identifying areas for improvement. This can be achieved through metrics such as the number of prevented incidents, mean time to detect and remediate threats, and compliance with security standards.
 </details>
