Update 1.1 Understand, adhere to, and promote professional ethics.md

--- a/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.1 Understand, adhere to, and promote professional ethics.md
@@ -110,6 +110,7 @@ The fourth canon emphasizes the continuous development and protection of the inf
 </details>
 
 10. How does adherence to the ISC² Code of Ethics benefit both individuals and the profession as a whole?
+<details>  
   <summary>Show answer</summary>
 Adherence to the Code upholds the reputation of the profession, builds trust among stakeholders, and ensures ethical and responsible conduct, ultimately benefiting both individuals and the collective.
 </details>
