Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -4,6 +4,39 @@ Effective security governance requires a holistic approach, embedding security i
 
 :necktie: Security must be baked in your company: in its software, processes, policies, departments and personnel.
 
+
+:bulb: “GRC is the integrated collection of capabilities that enable an organization to reliably achieve objectives, address uncertainty, and act with integrity.”
+
+GRC includes:
+
+- Governance: Ensuring that organizational activities support the business goals.
+
+- Risk : Identifying, analyzing, and addressing risks that could interfere with operations.
+
+- Compliance: Adhering to laws, regulations, and internal policies.
+
+```mermaid 
+timeline
+    title Evolution of GRC
+
+    section Before 2000s
+        Governance, risk, and compliance managed independently. COSO and ISO 31000 frameworks emerge : 1990s
+
+    section Regulatory Response
+        Enron and WorldCom scandals trigger SOX Act and demand for transparency : 2002
+
+    section Formal GRC Concept
+        OCEG introduces the GRC framework to unify governance, risk, and compliance : 2003–2007
+
+    section Technology Integration
+        Major vendors release GRC platforms to automate controls and processes : 2010s
+
+    section Modern GRC
+        GRC evolves with AI and analytics into integrated risk management (IRM) : 2020s+
+```
+
+
+
 **Third-party governance** refers to the oversight and management of external entities that interact with an organization. This includes vendors, contractors, partners, and service providers who access or handle sensitive data or systems. Third-party governance is critical because these entities often introduce additional risks that can impact the organization’s security.
 Key aspects of third-party governance include:
 
