Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -15,24 +15,21 @@ GRC includes:
 
 - Compliance: Adhering to laws, regulations, and internal policies.
 
+Below you can find a short timeline of GRC:
+
 ```mermaid 
-timeline
-    title Evolution of GRC
+flowchart LR
+    T1["1990s:<br>Governance, risk, and compliance managed independently.<br>COSO and ISO 31000 frameworks emerge."]
+    T2["2002:<br>Enron and WorldCom scandals trigger SOX Act and demand for transparency."]
+    T3["2003–2007:<br>OCEG introduces the GRC framework to unify governance, risk, and compliance."]
+    T4["2010s:<br>Vendors release GRC platforms to automate controls and processes."]
+    T5["2020s+:<br>GRC evolves with AI and analytics into integrated risk management (IRM)."]
 
-    section Before 2000s
-        Governance, risk, and compliance managed independently. COSO and ISO 31000 frameworks emerge : 1990s
+    T1 --> T2 --> T3 --> T4 --> T5
 
-    section Regulatory Response
-        Enron and WorldCom scandals trigger SOX Act and demand for transparency : 2002
-
-    section Formal GRC Concept
-        OCEG introduces the GRC framework to unify governance, risk, and compliance : 2003–2007
-
-    section Technology Integration
-        Major vendors release GRC platforms to automate controls and processes : 2010s
-
-    section Modern GRC
-        GRC evolves with AI and analytics into integrated risk management (IRM) : 2020s+
+    %% Styling: white background, grey text and border
+    classDef bwStyle fill:#ffffff,color:#444,stroke:#999;
+    class T1,T2,T3,T4,T5 bwStyle;
 ```
 
 
@@ -53,4 +50,16 @@ Without robust third-party governance, an organization’s security can be under
 
 By conducting regular documentation reviews, organizations can validate that their security measures are effective and aligned with compliance requirements.
 
+```mermaid 
+flowchart LR
+    A[Documentation Review] --> B[Supports ATO<br/>Authority to Operate]
+    B --> C[Formal approval for a system to operate]
+    
+    A --> D[Ensures Accuracy & Completeness<br/>of policies, procedures, configurations]
+    A --> E[Helps Identify Risks<br/>from gaps or inconsistencies]
+    A --> F[Improves Audit Readiness<br/>for inspections and compliance checks]
 
+    %% Styling: grayscale
+    classDef grayBox fill:#ffffff,stroke:#999,color:#333;
+    class A,B,C,D,E,F grayBox;
+```
