Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -124,3 +124,41 @@ Documentation review verifies the accuracy and completeness of security policies
   <summary>Show answer</summary>
 Audit readiness ensures an organization can readily demonstrate compliance with security regulations and standards during audits and inspections.
 </details>
+
+---
+## 1.3.1 Alignment of the security function to business strategy, goals, mission, and objectives ##
+
+**Security management planning** ensures the proper development, implementation, and enforcement of a security policy, aligning security functions with the organization's strategy, goals, mission, and objectives. This process involves crafting and deploying security measures based on factors such as business cases, budget constraints, and resource availability. Employing a **top-down approach** is often the most effective method for security management planning, with upper management taking the lead in initiating and defining organizational policies. These policies serve as guiding principles for all levels of the organizational hierarchy. Middle management is tasked with refining the security policy into standards, baselines, guidelines, and procedures. Operational managers or security professionals then execute the configurations outlined in the security management documentation, while end users are responsible for adhering to all organizational security policies.
+
+:necktie: A top-down approach in information security helps establish a culture of security from the highest levels of the organization down to individual employees, fostering a comprehensive and proactive approach to safeguarding sensitive information and assets.
+
+The **Strategic Plan** serves as a durable, long-term blueprint that articulates the organization's security purpose, aligning it with the overarching goals, mission, and objectives. With a typical lifespan of approximately five years, contingent upon annual maintenance and updates, it remains a crucial framework for guiding security initiatives and includes a comprehensive risk assessment.
+
+In contrast, the **Tactical Plan**, a mid-term strategy, furnishes details on achieving the objectives outlined in the Strategic Plan or can be formulated ad hoc in response to unforeseen circumstances. Typically viable for about a year, it provides a focused approach to executing the broader strategic vision.
+
+The **Operational Plan**, on the other hand, constitutes a short-term, meticulously delineated strategy derived from the Strategic and Tactical Plans. Although its relevance is fleeting, necessitating frequent updates (monthly or quarterly), it serves as the cornerstone for operational activities, ensuring alignment with tactical objectives.
+
+```mermaid 
+flowchart LR
+    style A fill:#ddd,stroke:#999,color:#333
+    style B fill:#bbb,stroke:#888,color:#333
+    style C fill:#999,stroke:#666,color:#333
+
+    A["Strategic Plan<br>Duration: ~5 years<br>Long-term blueprint with risk assessment"]
+    B["Tactical Plan<br>Duration: ~1 year<br>Mid-term, executes strategy"]
+    C["Operational Plan<br>Duration: ~3 months<br>Short-term, detailed, frequently updated"]
+
+    A --- B --- C
+    
+```
+:necktie: Hierarchies play a crucial role in the CISSP approach, remember that plans, roles, documentation, and clearance levels must be appropriately structured and aligned within the organization chart.
+
+Scoping and tailoring are employed to align security objectives with organizational goals:
+**Scoping** is a process review of a list of security baseline controls and selecting only those controls that apply to the IT system you're trying to protect.
+**Tailoring** refers to modifying the list of security controls within a baseline to align with the organization mission.
+
+:link: The G20/OECD Principles of Corporate Governance help policy makers evaluate and improve the legal, regulatory and institutional framework for corporate governance. They identify the key building blocks for a sound corporate governance framework and offer practical guidance for implementation at the national level: G20/OECD Principles of Corporate Governance 2023
+
+### Open Questions###
+
+
