Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -157,8 +157,8 @@ Scoping and tailoring are employed to align security objectives with organizatio
 **Scoping** is a process review of a list of security baseline controls and selecting only those controls that apply to the IT system you're trying to protect.
 **Tailoring** refers to modifying the list of security controls within a baseline to align with the organization mission.
 
-:link: The G20/OECD Principles of Corporate Governance help policy makers evaluate and improve the legal, regulatory and institutional framework for corporate governance. They identify the key building blocks for a sound corporate governance framework and offer practical guidance for implementation at the national level: G20/OECD Principles of Corporate Governance 2023
-
+:link: The G20/OECD Principles of Corporate Governance help policy makers evaluate and improve the legal, regulatory and institutional framework for corporate governance. They identify the key building blocks for a sound corporate governance framework and offer practical guidance for implementation at the national level: [G20/OECD Principles of Corporate Governance 2023
+](https://www.oecd.org/publications/g20-oecd-principles-of-corporate-governance-2023-ed750b30-en.htm)
 ### Open Questions###
 
 
