Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -159,6 +159,52 @@ Scoping and tailoring are employed to align security objectives with organizatio
 
 :link: The G20/OECD Principles of Corporate Governance help policy makers evaluate and improve the legal, regulatory and institutional framework for corporate governance. They identify the key building blocks for a sound corporate governance framework and offer practical guidance for implementation at the national level: [G20/OECD Principles of Corporate Governance 2023
 ](https://www.oecd.org/publications/g20-oecd-principles-of-corporate-governance-2023-ed750b30-en.htm)
-### Open Questions###
+
+
+### Open Questions ###
+1. Describe the key difference between the Strategic Plan and the Tactical Plan in security management.
+<details>
+  <summary>Show answer</summary>
+The Strategic Plan is a long-term blueprint outlining the organization's overall security goals, while the Tactical Plan focuses on the mid-term and provides specific details on how to achieve the objectives set forth in the Strategic Plan.
+</details>
+
+2. Explain the role of middle management in the top-down approach to security management.
+<details>
+  <summary>Show answer</summary>
+Middle management translates the high-level security policy set by upper management into specific standards, baselines, guidelines, and procedures that can be implemented by operational staff.
+</details>
+
+3. What is the purpose of scoping and tailoring in information security?
+<details>
+  <summary>Show answer</summary>
+Scoping and tailoring ensure that security controls are relevant and efficient. Scoping selects only necessary controls, while tailoring modifies them to align with the organization's specific mission and risk profile.
+</details>
+
+4. How does the Operational Plan relate to the Strategic and Tactical Plans?
+<details>
+  <summary>Show answer</summary>
+The Operational Plan is a short-term, actionable plan derived from the Strategic and Tactical Plans. It focuses on the day-to-day operations necessary to achieve the objectives outlined in the higher-level plans.
+</details>
+
+5. Why is a top-down approach considered effective in establishing a culture of security within an organization?
+<details>
+  <summary>Show answer</summary>
+A top-down approach ensures that security is a priority for leadership, which sets a clear tone and expectation for the entire organization. This fosters a proactive security culture where everyone understands their role in protecting sensitive information.
+</details>
+
+6. Who is ultimately responsible for adhering to organizational security policies in a top-down approach?
+<details>
+  <summary>Show answer</summary>
+Ultimately, all members of the organization, including end-users, are responsible for adhering to the established security policies in a top-down approach.
+</details>
+
+7. Why are hierarchies considered crucial in the CISSP approach to security management?
+<details>
+  <summary>Show answer</summary>
+Hierarchies ensure clear lines of responsibility and accountability. They define the roles and permissions related to security management, planning, documentation, and clearance levels, contributing to a well-structured and manageable security framework.
+</details>
+
+---
+
 
 
