Update 1.3 Evaluate, apply, and sustain security governance principles.md

--- a/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
+++ b/DOMAIN1: The Cybersecurity Manager/1.3 Evaluate, apply, and sustain security governance principles.md
@@ -206,5 +206,12 @@ Hierarchies ensure clear lines of responsibility and accountability. They define
 
 ---
 
+## 1.3.2 Organizational processes (e.g., acquisitions, divestitures, governance committees) ##
+
+Security governance is vital for organizations to address various aspects, including acquisitions, divestitures, and governance committees. 
+In an **acquisition**, a company purchases another company's assets, resulting in the acquired company's dissolution. The acquiring company may choose to retain the acquired business's name. Conversely, in a **merger**, two companies combine assets to establish a new entity. Mergers are common when both companies possess comparable influence and scale. **Divestiture** involves either fully or partially selling off a product line, business unit, division, or subsidiary. It's often viewed as a preferred growth strategy over diversification, involving the complete or partial transfer of assets, personnel, facilities, and inventory. The primary goal of divestiture is to discontinue a business segment, freeing up resources for more advantageous and profitable ventures.
+
+<img width="464" alt="mergers" src="https://github.com/user-attachments/assets/0bdad079-74a7-462c-893f-60f53a65fc1a" />
+
 
 
